ros2_ws/log/build_2024-12-29_17-29-52/mypkg/stderr.log
  File "/home/haru/test2/ros2_ws/install/mypkg/lib/python3.8/site-packages/mypkg/talker.py", line 10
    if request.name == "本山暖"
                           ^
SyntaxError: invalid syntax

